started dev on calendar page

--- a/src/style/base/_settings.scss
+++ b/src/style/base/_settings.scss
@@ -1,4 +1,6 @@
-$theme-color: #006adb;
+$theme-color: rgba(0,106,219,.86);
+$theme-color-high: rgba(0,106,219,1);
+
 $bg-color:#121212;
 $body-color: #ffffff;
 $dp-1: rgba(255,255,255,0.05);
