--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -2,4 +2,6 @@
 
 @import './base/base';
 @import './components/calendarList';
-@import './components/navbar'
+@import './components/calendarPage';
+@import './components/loadingPage';
+@import './components/navbar';
