--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -1,31 +1,46 @@
 * {
     box-sizing: border-box;
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     transition: .2s all;
 }
-html {
-    background-color:$bg-color;
+
+html,
+body {
+    background: $bg-color;
 }
 
-.App {
-    // height:100vh;
-    margin-top:10rem;
+#root {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    // justify-content: center;
-    color:$body-color;
-    opacity:.87;
+    color: $body-color;
+    opacity: .87;
+}
+
+.page {
+    padding-top: 10rem;
+}
+
+.homepage {
+    @extend .page;
 }
 
 .button {
-    border:2px solid $theme-color;
-    background:none;
-    border-radius:5px;
+    border: 2px solid $theme-color;
+    background: none;
+    border-radius: 5px;
     padding: .25rem .75rem;
     color: $theme-color;
-    &:hover{
-        cursor:pointer
+
+    &:hover {
+        cursor: pointer
+    }
+}
+
+a {
+    color: $theme-color;
+    text-decoration: none;
+    &:hover {
+        color: $theme-color-high;
     }
 }
