--- a/src/style/components/_calendarList.scss
+++ b/src/style/components/_calendarList.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 90%;
     padding:0 5rem;
     h1 {
         width:100%;
@@ -14,12 +14,14 @@
         &--noCalendars{
             @extend .calendarList__list;
             justify-content: center;
+            margin-top:.5rem;
             &::before{
                 content: "No Calendars Found.";
                 font-weight: bold;
             }
         }
         .calendarList__item {
+            text-decoration: none;
             position: relative;
             display: inline-flex;
             flex-direction: column;
