--- a/src/style/components/_navbar.scss
+++ b/src/style/components/_navbar.scss
@@ -2,19 +2,21 @@
     position:absolute;
     top:0;
     left:0;
-    // box-shadow: 0px -5px 8px $theme-color;
     width:100%;
-    height:3rem;
+    height:5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 5%;
     background-color: $dp-4;
 
+    h3 {
+        font-size:1.5rem;
+    }
     .navbar__authBtn {
         @extend .button;
-    }
-    h3 {
-        // color: $theme-color;
+        font-size:1.5rem;
+        border-width: 3px;
+        font-weight: bold;
     }
 }
