--- a/src/style/components/_calendarList.scss
+++ b/src/style/components/_calendarList.scss
@@ -29,7 +29,7 @@
             padding: .25rem .75rem;
             width:15rem;
             height:10rem;
-            margin:.5rem;
+            margin:0 1rem 1rem 0;
             color:$hint-color;
             background-color: $dp-1;
             border-radius: 5px;
