fixed useEffect bug, MVP 1.0 reached

--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -3,5 +3,6 @@
 @import './base/base';
 @import './components/calendarList';
 @import './components/calendarPage';
+@import './components/eventSummary';
 @import './components/loadingPage';
 @import './components/navbar';
