--- a/src/style/components/_calendarPage.scss
+++ b/src/style/components/_calendarPage.scss
@@ -1,11 +1,12 @@
 .calendarPage {
     @extend .page;
     height: 100vh;
-    .calendarPage__content {
+    &__content {
         display: flex;
+        width: 100%;
+        flex:1;
     }
-
-    .calendarPage__inner {
+    &__inner {
         flex: 1;
         display: flex;
         flex-direction: column;
@@ -13,8 +14,10 @@
         justify-content: center;
     }
 
-    .calendarPage__left {
+    &__left {
+
         @extend .calendarPage__inner;
+        border-right: 1px solid $hint-color;
         h1 {
             font-size:5rem;
         }
@@ -23,7 +26,7 @@
         }
     }
 
-    .calendarPage__right {
+    &__right {
         @extend .calendarPage__inner;
     }
 }
