--- a/src/style/components/_eventSummary.scss
+++ b/src/style/components/_eventSummary.scss
@@ -1,8 +1,8 @@
 .eventSummary {
-    width:40%;
+    // width:35%;
     // padding:.25rem 0;
     &__title {
-        color: $theme-color;
+        // color: $theme-color;
         font-size: 1.5rem;
         font-weight: bold;
     }
