tidied up calendarPage

--- a/src/style/base/_settings.scss
+++ b/src/style/base/_settings.scss
@@ -10,4 +10,6 @@ $dp-6: rgba(255,255,255,0.11);
 
 $text-color: rgba(255,255,255,.87);
 $hint-color: rgba(255,255,255,.6);
+$dark-hint-color: rgba(0,0,0,.6);
+$dark-body-color: #121212;
 $disabled-color: rgba(255,255,255,.38);
