--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -18,7 +18,6 @@ body {
 }
 
 .page {
-    padding-top: 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,4 +50,7 @@ a {
     &:hover {
         color: $theme-color-high;
     }
+}
+.hint-color {
+    color: $hint-color;
 }
